@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1027 2023/11/14 01:05:01 wiz Exp $
+# $NetBSD: Makefile,v 1.1028 2023/11/14 01:10:07 wiz Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -337,7 +337,6 @@ SUBDIR+=	libggiwmh
 SUBDIR+=	libgii
 SUBDIR+=	libgiigic
 SUBDIR+=	libgltf
-SUBDIR+=	libgnomecanvas
 SUBDIR+=	libheif
 SUBDIR+=	libhighway
 SUBDIR+=	libimagequant
