@@ -1,136 +1,0 @@
-@comment $NetBSD: PLIST,v 1.25 2011/02/25 13:15:25 drochner Exp $
-include/libgnomecanvas-2.0/libgnomecanvas/gnome-canvas-bpath.h
-include/libgnomecanvas-2.0/libgnomecanvas/gnome-canvas-clipgroup.h
-include/libgnomecanvas-2.0/libgnomecanvas/gnome-canvas-line.h
-include/libgnomecanvas-2.0/libgnomecanvas/gnome-canvas-path-def.h
-include/libgnomecanvas-2.0/libgnomecanvas/gnome-canvas-pixbuf.h
-include/libgnomecanvas-2.0/libgnomecanvas/gnome-canvas-polygon.h
-include/libgnomecanvas-2.0/libgnomecanvas/gnome-canvas-rect-ellipse.h
-include/libgnomecanvas-2.0/libgnomecanvas/gnome-canvas-rich-text.h
-include/libgnomecanvas-2.0/libgnomecanvas/gnome-canvas-shape.h
-include/libgnomecanvas-2.0/libgnomecanvas/gnome-canvas-text.h
-include/libgnomecanvas-2.0/libgnomecanvas/gnome-canvas-util.h
-include/libgnomecanvas-2.0/libgnomecanvas/gnome-canvas-widget.h
-include/libgnomecanvas-2.0/libgnomecanvas/gnome-canvas.h
-include/libgnomecanvas-2.0/libgnomecanvas/libgnomecanvas.h
-lib/libglade/2.0/libcanvas.la
-lib/libgnomecanvas-2.la
-lib/pkgconfig/libgnomecanvas-2.0.pc
-share/gtk-doc/html/libgnomecanvas/GnomeCanvas.html
-share/gtk-doc/html/libgnomecanvas/GnomeCanvasBpath.html
-share/gtk-doc/html/libgnomecanvas/GnomeCanvasClipgroup.html
-share/gtk-doc/html/libgnomecanvas/GnomeCanvasEllipse.html
-share/gtk-doc/html/libgnomecanvas/GnomeCanvasGroup.html
-share/gtk-doc/html/libgnomecanvas/GnomeCanvasItem.html
-share/gtk-doc/html/libgnomecanvas/GnomeCanvasLine.html
-share/gtk-doc/html/libgnomecanvas/GnomeCanvasPixbuf.html
-share/gtk-doc/html/libgnomecanvas/GnomeCanvasPolygon.html
-share/gtk-doc/html/libgnomecanvas/GnomeCanvasRE.html
-share/gtk-doc/html/libgnomecanvas/GnomeCanvasRect.html
-share/gtk-doc/html/libgnomecanvas/GnomeCanvasRichText.html
-share/gtk-doc/html/libgnomecanvas/GnomeCanvasShape.html
-share/gtk-doc/html/libgnomecanvas/GnomeCanvasWidget.html
-share/gtk-doc/html/libgnomecanvas/ch01.html
-share/gtk-doc/html/libgnomecanvas/ch02.html
-share/gtk-doc/html/libgnomecanvas/home.png
-share/gtk-doc/html/libgnomecanvas/index.html
-share/gtk-doc/html/libgnomecanvas/index.sgml
-share/gtk-doc/html/libgnomecanvas/left.png
-share/gtk-doc/html/libgnomecanvas/libgnomecanvas-gnome-canvas-path-def.html
-share/gtk-doc/html/libgnomecanvas/libgnomecanvas-gnome-canvas-text.html
-share/gtk-doc/html/libgnomecanvas/libgnomecanvas-gnome-canvas-util.html
-share/gtk-doc/html/libgnomecanvas/libgnomecanvas.devhelp
-share/gtk-doc/html/libgnomecanvas/libgnomecanvas.devhelp2
-share/gtk-doc/html/libgnomecanvas/right.png
-share/gtk-doc/html/libgnomecanvas/style.css
-share/gtk-doc/html/libgnomecanvas/up.png
-share/locale/am/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ang/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ar/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/as/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ast/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/az/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/be/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/bg/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/bn/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/bn_IN/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/br/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/bs/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ca/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ca@valencia/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/crh/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/cs/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/cy/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/da/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/de/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/dz/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/el/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/en@shaw/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/en_CA/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/en_GB/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/eo/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/es/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/et/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/eu/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/fa/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/fi/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/fr/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ga/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/gl/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/gu/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/he/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/hi/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/hr/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/hu/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/id/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/is/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/it/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ja/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ka/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/kn/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ko/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ku/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/li/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/lt/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/lv/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/mai/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/mg/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/mk/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ml/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/mn/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/mr/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ms/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/nb/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ne/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/nl/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/nn/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/oc/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/or/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/pa/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/pl/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/pt/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/pt_BR/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ro/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ru/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/rw/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/sk/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/sl/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/sq/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/sr/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/sr@ije/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/sr@latin/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/sv/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ta/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/te/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/th/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/tr/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/tt/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/ug/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/uk/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/vi/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/wa/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/xh/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/yi/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/zh_CN/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/zh_HK/LC_MESSAGES/libgnomecanvas-2.0.mo
-share/locale/zh_TW/LC_MESSAGES/libgnomecanvas-2.0.mo
